 ** Attempted some fixes at some obscure bugs that can happen with replacement spells (e.g. tracking Immolate in a debuff icon was getting force-changed to Corruption in Affliction spec.)
 ** Removed the blank normaltexture that every icon had because of issues it causes in WoW 5.1
 ** The Instance Type condition should now work properly.
 
===v6.0.3===
 * Re-implemented the stance condition for paladin seals.
 * Minor updates for some buff/debuff equivalancies. Still need help getting these completely up to date, though! If you notice something missing, please let me know!
 * You can now change the event of an event handler once it has been created.
 * New setting for Combat Event icons - Don't Refresh.
 * Added Raid Finder to the Instance Type condition.
 * You can now output text to the UI Errors Frame.
 * Moved the Timers ignore GCD & Bars ignore GCD settings from per-profile to per-icon.
 * Updated Unit Cooldown icons for all cooldown resets in MoP.
 * DR categories should now be complete for MoP. Please report any missing spells.
 * You can once again toggle config mode in combat. You may still get script ran too long errors if TellMeWhen_Options has not been loaded yet and you unlock in combat,  but it won't break anything.
 * You can now reorder groups.
 * Added a setting to make colors ignore the GCD. It is enabled by default.
 * Added center text as a default text layout.
 * New condition: Unit is Player.
 * Unit conditions now allow Lua conditions.
 * Unit conditions now allow you to track the target of the icon's units.
 * Bug fixes:
 ** Fixed static formats again (ICONMENU_MULTISTATECD_DESC)
 ** (Condition ROLE): attempt to index global "roles" (a nil value)
 ** Buff/debuff duration sorting actually works now!
 ** TellMeWhen_Options.lua:3351: attempt to index local "settingsUsedByEvent" (a nil value)
 ** Announcements.lua:531: attempt to concatenate local "Text" (a nil value)